# simple_music_player_rust

./: .gitignore  Cargo.toml  readme.md
.github/actions/install-linux-dependencies/: action.yml
.github/workflows/: check_version_is_unique.yml  continuous_integration.yml
src/: config.rs  lib.rs  library.rs  main.rs  memory_source.rs  playback.rs  ui.rs
src/image_cache/: mod.rs
tests/: image_cache_tests.rs  library_tests.rs
