[package]
name = "egui_standalone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.15.*"
toml = "0.5.*"
serde = "1.0.*"
serde_derive = "1.0.*"
anyhow = "1.0.*"
log = "0.4.*"
simplelog = "0.10.2"