[package]
name = "simple_music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simple_music_lib"
path = "src/lib.rs"

[[bin]]
name = "simple_music_player"
path = "src/bin/main.rs"

[dependencies]
eframe = { version = "0.19", features = ["persistence"] }
egui_extras = { version = "0.19", features = ["svg"] }

libmpv = { version = "2.0", features = ["build_libmpv"]}
rfd = "0.10"
image = "0.24.3"

toml = "0.5.*"
serde = "1.0.*"
serde_derive = "1.0.*"
anyhow = "1.0.*"
log = "0.4.*"
simplelog = "0.12.0"
glob = "0.3.0"
rand = "0.8"

[dev-dependencies]
test-log = "0.2.11"
env_logger = "0.9.0"